Merge vertx jar files